# sinokor-spp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: github_flow.md  static_checker.md  uv.md
src/decomposed_mdp/: .gitignore  README.md  config.py  config.yaml  main.py  requirements.txt  scenario_tree_mip.py  shell_main.sh  sweep.py  sweep_config.yaml
src/decomposed_mdp/configs/: base_config.py
src/decomposed_mdp/configs/sac/: uvp.py
src/decomposed_mdp/environment/: env.py  generator.py  utils.py
src/decomposed_mdp/models/: autoencoder.py  common.py  critic.py  decoder.py  embeddings.py  encoder.py
src/decomposed_mdp/rl_algorithms/: clipped_gaussian.py  loss.py  projection.py  projection_prob_actor.py  test.py  train.py  utils.py
src/sinokor/: __init__.py
src/spp_toy/: constraint.py  env.py  locate.py  stowage.ipynb  test.ipynb  utils.py  vis.py
